--- a/src/app/component/navtoolbar/navtoolbar.component.html
+++ b/src/app/component/navtoolbar/navtoolbar.component.html
@@ -7,6 +7,6 @@
         <button mat-button routerLink="/ICOS">Incoming ICOS</button>
         <button mat-button>LEGIT TOKENS</button>
         <button mat-button>ICO Reviews</button>
-        <button mat-button routerLink="/Login">Login</button>
+        <button mat-button routerLink="/login">Login</button>
     </mat-toolbar-row>
 </mat-toolbar>
